update: adding user email into the pokemon table
