# internal/models/pokemon.go
@@ -5,8 +5,9 @@ import "gorm.io/gorm"
 // Pokemon represents a pokemon entity
 type Pokemon struct {
 	gorm.Model
-	Name   string `json:"name"`
-	Type   string `json:"type"`
-	Notes  string `json:"notes"`
-	Sprite string `json:"sprite"`
+	UserEmail string `json:"userEmail"`
+	Name      string `json:"name"`
+	Type      string `json:"type"`
+	Notes     string `json:"notes"`
+	Sprite    string `json:"sprite"`
 }
